--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,60 @@ body {
 }
 
 header {
-    
+    background-color: #fff;
+}
+
+header>h1{
+    display:inline-block;
 }
 
 main {
     width:75%;
+    height:80vh;
+    background-color: #fff;
+    margin: 5vh auto;
 }
 
-nav{
-    margin-bottom:3px;
+nav-task{
+    text-align: center;
+    margin-bottom:300px;
     border-radius: 25%;
+    border-top-left-radius: 20%;
+    border-top-right-radius: 20%;
+}
+
+h3{
+    font-size: 0px;
+    color: #000;
+    margin-left: 5px;
+}
+.type{
+    margin-left: 5px;
+    border: 2px solid black;
+    border-radius:15%;
+    padding: 3px;
+    font-size: 12px;
+    color: white;
+}
+
+.editorial{
+    background-color: blue;
+}
+
+.q1{
+    background-color: rgba(140, 0, 140, 0.733);
+}
+
+.recruiting{
+    background-color: blue;
+}
+
+.mobile{
+    background-color: orange;
+}
+.website{
+    background-color: orange;
+}
+.sales{
+    background-color: orange;
 }
