--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 header {
-    background-color: #fff;
 }
 
 header>h1{
@@ -19,50 +18,75 @@ header>h1{
 main {
     width:75%;
     height:80vh;
-    background-color: #fff;
-    margin: 5vh auto;
+    margin:5px auto;
 }
 
-nav-task{
-    text-align: center;
-    margin-bottom:300px;
-    border-radius: 25%;
-    border-top-left-radius: 20%;
-    border-top-right-radius: 20%;
+.nav-task{
+    border-radius: 5px 5px 0 0 ;
+    height:50px;
+    width: 75%;
+    margin:50px auto 5px auto;
+
+}
+
+header, main, .nav-task{
+    background-color: #fff;
+}
+.task{
+}
+
+li{
+    list-style: none;
 }
 
 h3{
-    font-size: 0px;
+    font-size: 20px;
     color: #000;
     margin-left: 5px;
 }
+h3::before {
+    content: '\25bc';
+}
+/* Tipi */
 .type{
     margin-left: 5px;
-    border: 2px solid black;
     border-radius:15%;
-    padding: 3px;
+    padding: 5px;
     font-size: 12px;
     color: white;
 }
-
+/* Colori Tipo */
 .editorial{
-    background-color: blue;
+    background-color: #45abea;
 }
-
 .q1{
-    background-color: rgba(140, 0, 140, 0.733);
+    background-color: #9c72e4;
 }
-
 .recruiting{
-    background-color: blue;
+    background-color: #64c0a9;
 }
-
 .mobile{
-    background-color: orange;
+    background-color: #f29e33;
 }
 .website{
-    background-color: orange;
+    background-color: #d863a1;
 }
 .sales{
-    background-color: orange;
+    background-color: #b0c926;
 }
+
+.tasksec
+}
+
+li::before{
+    content: '\2713';
+    color: green;
+    margin-right: 5px;
+}
+
+.cross::before{
+    content: "\2717";
+    color: red;
+    margin-right: 5px;
+}
+
