--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@
 body {
     background-color: #b1bbf8;
 }
-header>h1{
+
+.logo, h1{
+    vertical-align: middle;
+}
+header>h1 {
     display:inline-block;
 }
 main {
@@ -18,25 +22,25 @@ header, main, .nav-task {
     background-color: #fff;
 }
 /* TaskBar e bottoni */
-.nav-task{
+.nav-task {
     border-radius: 5px 5px 0 0 ;
     height:50px;
     width: 75%;
     margin:50px auto 5px auto;
     padding: 2% 10%;
 }
-button{
+button {
     font-size: 10px;
     padding:3px 10px;
     margin-right: 4px;
     border-radius: 3px;
 }
-#add-task{
+#add-task {
     background-color: #45abea;
     color:#fff;
     border:#45abea;
 }
-#add-section{
+#add-section {
     color:rgb(147, 147, 147);
     border: 1px solid rgb(147, 147, 147);
 }
@@ -73,7 +77,7 @@ li {
 .r {
     border-color: red;
 }
-#r1::before{
+#r1::before {
     content:"\2717";
     color:red;
 }
