--- a/css/style.css
+++ b/css/style.css
@@ -3,67 +3,83 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     background-color: #b1bbf8;
 }
 
-.logo, h1{
+.logo,
+h1 {
     vertical-align: middle;
 }
+
 header>h1 {
-    display:inline-block;
+    display: inline-block;
 }
+
 main {
-    width:75%;
-    height:100vh;
-    margin:5px auto;
+    width: 75%;
+    height: 100vh;
+    margin: 5px auto;
 }
-header, main, .nav-task {
+
+header,
+main,
+.nav-task {
     background-color: #fff;
 }
+
 /* TaskBar e bottoni */
 .nav-task {
-    border-radius: 5px 5px 0 0 ;
-    height:50px;
+    border-radius: 5px 5px 0 0;
+    height: 50px;
     width: 75%;
-    margin:50px auto 5px auto;
+    margin: 50px auto 5px auto;
     padding: 2% 10%;
 }
+
 button {
     font-size: 10px;
-    padding:3px 10px;
+    padding: 3px 10px;
     margin-right: 4px;
     border-radius: 3px;
 }
+
 #add-task {
     background-color: #45abea;
-    color:#fff;
-    border:#45abea;
+    color: #fff;
+    border: #45abea;
 }
+
 #add-section {
-    color:rgb(147, 147, 147);
+    color: rgb(147, 147, 147);
     border: 1px solid rgb(147, 147, 147);
 }
+
 /* Corpo pagina */
 .task {
     margin-left: 10%;
     padding: 20px;
 }
+
 h3 {
     font-size: 18px;
-    margin:2% 0 2% 0;
+    margin: 2% 0 2% 0;
 }
+
 h3::before {
     content: '\25bc';
     font-size: 15px;
-    margin-right:2px;
+    margin-right: 2px;
 }
+
 li {
-    font-size:14px;
+    font-size: 14px;
     list-style: none;
     display: inline-block;
-    margin:8px;
+    margin: 8px;
 }
+
 /* Simboli  */
 .round {
     width: 20px;
@@ -73,46 +89,44 @@ li {
     display: inline-block;
     text-align: center;
     line-height: 20px;
-}
-.r {
-    border-color: red;
-}
-#r1::before {
-    content:"\2717";
-    color:red;
-}
-#r2::before {
-    content: '\2717';
-    color: red;
-}
-.plholder::before {
-    content: '\2713';
     color: green;
 }
+
+.r {
+    border-color: red;
+    color: red;
+}
+
 /* Tipi */
 .type {
     margin-left: 5px;
-    border-radius:15%;
+    border-radius: 15%;
     padding: 5px;
     font-size: 12px;
     color: white;
 }
+
 /* Colori Tipo */
 .editorial {
     background-color: #45abea;
 }
+
 .q1 {
     background-color: #9c72e4;
 }
+
 .recruiting {
     background-color: #64c0a9;
 }
+
 .mobile {
     background-color: #f29e33;
 }
+
 .website {
     background-color: #d863a1;
 }
+
 .sales {
     background-color: #b0c926;
 }
